--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sass": "^4.11.0",
     "react": "^17.0.1",
+    "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.37.5"
