--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "typewriter-effect": "^2.18.0"
   }
 }
