--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
   "dependencies": {
     "gatsby": "^3.11.1",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
+    "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sass": "^4.11.0",
+    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-sharp": "^3.12.0",
     "react": "^17.0.1",
     "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "sass": "^1.37.5",
     "typewriter-effect": "^2.18.0"
   }
